--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,10 +38,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-  google_fonts: ^6.2.1
+  google_fonts: ^5.0.0
   flutter_localization: ^0.2.0
   provider: ^6.1.2
   flutter_svg: ^2.0.10+1
+  image_picker: ^0.8.7+4
+  url_launcher: ^6.0.12
 
 dev_dependencies:
   flutter_test:
@@ -70,6 +72,7 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/
+    - assets/chatbot-project-442517-9e9f0f2cd021.json
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
